--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-jwt": "^5.3.3",
+    "express-validator": "^5.3.1",
+    "formidable": "^2.1.1",
+    "fs": "^0.0.1-security",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.8.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
+    "uuidv1": "^1.6.14"
   }
 }
